<resources>
    <string name="app_name">Lesson_03_Yermakov</string>
    <string name="sign_in">Войти</string>
    <string name="sign_in_title">@string/sign_in</string>
    <string name="sign_in_login_hint">Логин</string>
    <string name="sign_in_password_hint">Пароль</string>
    <string name="sign_in_action">@string/sign_in</string>
    <string name="refresh">Обновить</string>
    <string name="snackbar_base_error">Произошла непредвиденная ошибка.\nПожалуйста, попробуйте позже</string>
    <string name="base_error">Произошла непредвиденная ошибка.</string>
    <string name="error_multiline_text">Детальный текст ошибки, занимающий несколько строк</string>
    <string name="input_base_error">Поле заполнено неверно</string>
    <string name="input_empty_error">Поле не должно быть пустым</string>
    <string name="catalog">Каталог</string>
    <string name="buy">Купить</string>
    <string name="price_format">%s ₽</string>
    <string name="details_format">• %s</string>
    <string name="size">Размер</string>
    <string name="buy_now">КУПИТЬ СЕЙЧАС</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>