<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/normal_100"
    android:layout_marginEnd="@dimen/normal_100"
    android:fitsSystemWindows="true"
    tools:context=".presentation.ui.signIn.SignInFragment">

    <TextView
        android:id="@+id/textTitle"
        style="@style/TextAppearance.H1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_title"
        app:layout_constraintBottom_toTopOf="@id/layoutLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_200"
        android:hint="@string/sign_in_login_hint"
        app:layout_constraintBottom_toTopOf="@id/layoutPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_200"
        android:hint="@string/sign_in_password_hint"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/ic_eye_selector"
        app:layout_constraintBottom_toTopOf="@id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPassword">

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:text="@string/sign_in_action" />
        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="3dp"
            android:indeterminateTint="@color/white"
            android:indeterminate="true" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>